@@ -1,5 +1,7 @@
 Unreleased
 
+This release drops support for Python 3.6.
+
 Breaking Changes
  * [#8399] In an effort to update the Docker startup steps to make them as 
    easy as possible and compatible across as many OS's as possible, the default
